@@ -1,7 +1,3 @@
-<!--
-    WIP
-    !-->
-
 <h1>
   &ldquo;De naam is Pond...<br>
   LilyPond&rdquo;</h1>
@@ -15,15 +11,17 @@
 </p>
 
 <p>
-  Scores made with computers almost always look bland and uninspiring,
-  but for what reason?  Machines may be mechanical, but why should their
-  products be?  With that thought in mind we started programming seven
-  years ago.  We have tried to capture the rules of good music engraving
-  in a program, and that program is called <em>LilyPond</em>.  We built
-  it like we expect software to be: robust, open and flexible.  The best
-  is that you can create beautiful sheet music comfortably with
-  LilyPond.
+  Partituren die met de computer zijn gemaakt zien er vrijwel altijd
+  vlak en inspiratieloos uit, maar waarom?  Machines mogen dan
+  mechanisch zijn, maar waarom zouden hun produkten dat moeten zijn?
+  Met die gedachte zijn we zeven jaar geleden gaan programmeren.  We
+  hebben geprobeerd de regels van het fraai muziekgraveren in een
+  programma te vangen, en dat programma heet <em>LilyPond</em>.  We
+  hebben het gebouwd zoals wij dat van software verwachten: robuust,
+  open en flexibel.  Het mooiste is dat je met LilyPond heel
+  comfortabel prachtige bladmuziek kunt maken.
 </p>
+
 <p>
   Have fun!
 </p>
@@ -33,18 +31,18 @@
 </p>
 <ul>
   <li>
-    Print your music with LilyPond!  Find out
-    <a href="advantages.html">why</a>.
+    Druk je bladmuziek met LilyPond!  Ontdek
+    <a href="advantages.html">waarom</a>.
   <li>
-    Don't take our word for it: read <a href="testimonials.html">what
-      others are saying</a>.
+    Ga niet af op wat wij je vertellen: lees <a
+      href="testimonials.html">wat anderen over LilyPond zeggen</a>.
   <li>
-    Curious?  Take a <a href="tour.html">brief tour of LilyPond</a>,
-    or dive into the <a href="howto.html">crash course</a>.
+    Nieuwsgierig?  Doe een <a href="tour.html">kort rondje LilyPond</a>,
+    of duik de <a href="howto.html">stoomcursus</a> in.
   <li>
-    Questions? Take a look at our <a
-    href="../about/faq.html">Frequently Asked Questions</a>.
+    Vragen?  Kijk eens naar de<a href="../about/faq.html">Veel
+    Gestelde Vragen (FAQ)</a>.
   <li>
-    <a href="../download">Download</a> it directly.
+    <a href="../download">Download</a> het direkt.
 </ul>
 
