@@ -1,7 +1,11 @@
 2005-01-28  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* nl/switch/index.html: 
+	* nl/index.html: Update.
+
 	* scripts/format-page.py: Refactor.
 	(get_menu): Be safer.
+	(langify_url): Remove.
 
 	* site/template.ihtml: New file.
 
